syntax = "proto3";

package order;

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetAllOrders (GetAllOrdersRequest) returns (OrderListResponse);
  rpc GetOrderById (GetOrderByIdRequest) returns (OrderResponse);
  rpc GetOrdersByCustomer (GetOrdersByCustomerRequest) returns (OrderListResponse);
  rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (OrderResponse);
  rpc CancelOrder (CancelOrderRequest) returns (OrderResponse);
  rpc AddItemToOrder (AddItemToOrderRequest) returns (OrderResponse);
}

message CreateOrderRequest {
  int32 customerId = 1;
  repeated OrderItemInput items = 2;
  string notes = 3;
  string shippingAddress = 4;
  string billingAddress = 5;
  optional double shippingCost = 6;
  optional double discount = 7;
}

message OrderItemInput {
  int32 productId = 1;
  int32 quantity = 2;
  double price = 3;
  string notes = 4;
}

message GetAllOrdersRequest {
  int32 page = 1;
  int32 limit = 2;
  string customerId = 3;
}

message GetOrderByIdRequest {
  int32 id = 1;
}

message GetOrdersByCustomerRequest {
  string customerId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message UpdateOrderStatusRequest {
  int32 id = 1;
  string status = 2;
  string notes = 3;
}

message CancelOrderRequest {
  int32 id = 1;
  string reason = 2;
}

message AddItemToOrderRequest {
  int32 orderId = 1;
  string productId = 2;
  int32 quantity = 3;
  double unitPrice = 4;
}

message OrderResponse {
  Order order = 1;
}

message OrderListResponse {
  repeated Order orders = 1;
  int32 total = 2;
}

message Order {
  int32 id = 1;
  string orderNumber = 2;
  int32 customerId = 3;
  string status = 4;
  double subtotal = 5;
  double tax = 6;
  double shippingCost = 7;
  double discount = 8;
  double totalAmount = 9;
  string notes = 10;
  string shippingAddress = 11;
  string billingAddress = 12;
  repeated OrderItem items = 13;
  string createdAt = 14;
  string updatedAt = 15;
}

message OrderItem {
  int32 id = 1;
  int32 orderId = 2;
  int32 productId = 3;
  int32 quantity = 4;
  double price = 5;
  double subtotal = 6;
  string notes = 7;
}
